Fixed some of the warnings found by FindBugs
git-svn-id: http://josm.openstreetmap.de/svn/trunk@2626 0c6e7542-c601-0410-84e7-c038aed88b3b